fix: EventCards stuck at 50% width on mobile ratios.

--- a/src/components/Blocks/UpcomingEvents/UpcomingEvents.module.scss
+++ b/src/components/Blocks/UpcomingEvents/UpcomingEvents.module.scss
@@ -21,9 +21,4 @@
     gap: 30px;
     margin-top: 18px;
     margin-bottom: 51px;
-
-    &>div {
-        width: 50%;
-        max-width: 388px;
-    }
 }
